[singlestore] Added SingleStore interface for YCSB.

--- a/bin/bindings.properties
+++ b/bin/bindings.properties
@@ -69,6 +69,7 @@ riak:site.ycsb.db.riak.RiakKVClient
 rocksdb:site.ycsb.db.rocksdb.RocksDBClient
 s3:site.ycsb.db.S3Client
 scylla:site.ycsb.db.scylla.ScyllaCQLClient
+singlestore:site.ycsb.singlestore.SingleStoreDBClient
 solr7:site.ycsb.db.solr7.SolrClient
 tarantool:site.ycsb.db.TarantoolClient
 tablestore:site.ycsb.db.tablestore.TableStoreClient
