--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -241,6 +241,11 @@ LICENSE file.
     </dependency>
     <dependency>
       <groupId>site.ycsb</groupId>
+      <artifactId>singlestore-binding</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>site.ycsb</groupId>
       <artifactId>solr7-binding</artifactId>
       <version>${project.version}</version>
     </dependency>
