[singlestore] Improved concurrency by creating resource pool connections.

--- a/singlestore/conf/singlestore.properties
+++ b/singlestore/conf/singlestore.properties
@@ -1,4 +1,4 @@
-singlestore.url = jdbc:singlestore://127.0.0.1:3306/test
+singlestore.url = jdbc:singlestore:loadbalance://127.0.0.1:3306/test
 singlestore.user = root
 singlestore.passwd = 
 singlestore.use_json_set = false
