--- a/singlestore/conf/singlestore.properties
+++ b/singlestore/conf/singlestore.properties
@@ -2,3 +2,4 @@ singlestore.url = jdbc:singlestore:loadbalance://127.0.0.1:3306/test
 singlestore.user = root
 singlestore.passwd = 
 singlestore.use_json_set = false
+singlestore.max_pool_size = 20
